comments and minor cleanup in EventsTreeItem; replace Deque with list